fix the overflow

--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
   margin: 0 auto !important;
 }
 
-
-
 .featured p,
 .top-story p {
   font-family: Arial, Helvetica, sans-serif;
@@ -242,7 +240,7 @@ a {
 
 .card-picture {
   height: 300px;
-  width: 170px;
+  width: 300px;
   position: relative;
 }
 
@@ -852,5 +850,10 @@ svg {
     color: #f72210;
     background-color: white;
     width: 170px;
+  }
+
+  .card-picture {
+    height: 300px !important;
+    width: 180px !important;
   }
 }
